
now i need to hook in some callbacks to load the images in the browsing
window... note that this was a small 5 minute hack...  

-------------------------------------------------------------------------------

Mon Feb 21 20:19:19 CST 2000
(dphase)

*WARNING* *WARNING*
Do NOT compile this code!!!
I'm trying to fix ee2's rendering code and as of now it is broken.

(and on a lighter note we have new ee2 logo's)  ;)

-------------------------------------------------------------------------------

Tue Feb 22 22:09:56 CST 2000
(dphase)

woooo, all the imageops are back and running using the new drawing code :)
/me high fives KainX

-------------------------------------------------------------------------------

Fri Feb 25 21:36:56 CET 2000
(Christian)

Additions to Makefile.am for "make install" support. I couldn't get configure's
substitution mechanism to work (substituting @datadir@ gives me
"${prefix}/share" in the code) so I'm doing the substitution in the Makefile.

-------------------------------------------------------------------------------

Fri Feb 25 13:16:43 PST 2000
(KainX)

Did a complete overhaul on the code.  Functionality hasn't changed, but the
code is much more organized and streamlined.  There will be interface changes
to come.

-------------------------------------------------------------------------------
Sat Feb 26 12:12:16 CST 2000
(dphase)

Recovering from Friday night, Some fixes in the menu, work on Image Browser GUI

-------------------------------------------------------------------------------

Mon Feb 28 19:04:11 CST 2000
(dphase)

working on the gui for the image browser... doesnt do a whole lot atm

-------------------------------------------------------------------------------

Tue Feb 29 07:19:28 CST 2000
(dphase)

selecting an image in the browser now works... browser has some
functionality and some updates to the interface

-------------------------------------------------------------------------------
